# menorpreco

./: README.md  analise_preco.xlsx  data.jsonl  data.xlsx  lista_compra.csv  main.py  pyproject.toml
menorpreco/: scrapy.cfg
menorpreco/menorpreco/: items.py  middlewares.py  pipelines.py  settings.py
menorpreco/menorpreco/spiders/: notaparana.py
